src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@400;600&display=swap');

html, body, #root{
  width: 100%;
  min-height: 100%;
}

body{
  min-height: 100%;
  min-width: 100%;
  overflow-x: hidden;
}

h1{
  font-family: 'Poppins', sans-serif;
}

p, button{
  font-family: 'Open Sans', sans-serif;
}

